# awb-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LEGAL.md  LICENSE-APACHE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: transform_bench.rs
crates/awb_bot/: Cargo.toml
crates/awb_bot/src/: bot_runner.rs  checkpoint.rs  config.rs  lib.rs  report.rs
crates/awb_bot/tests/: bot_integration.rs
crates/awb_cli/: Cargo.toml
crates/awb_cli/src/: main.rs
crates/awb_cli/src/commands/: bot.rs  export.rs  list.rs  login.rs  mod.rs  oauth.rs  run.rs
crates/awb_cli/tests/: cli_smoke.rs
crates/awb_domain/: Cargo.toml
crates/awb_domain/src/: diff.rs  lib.rs  profile.rs  rules.rs  session.rs  types.rs  warnings.rs
crates/awb_engine/: Cargo.toml
crates/awb_engine/proptest-regressions/: general_fixes.txt
crates/awb_engine/src/: bot_policy.rs  category.rs  diff_engine.rs  fix_config.rs  general_fixes.rs  lib.rs  masking.rs  namespace_util.rs  review.rs  skip.rs  transform.rs  typo_fix.rs
crates/awb_engine/tests/: engine_integration.rs  general_fixes_integration.rs
crates/awb_ffi/: Cargo.toml  build.rs
crates/awb_ffi/src/: awb_ffi.udl  c_api.rs  lib.rs
crates/awb_mw_api/: Cargo.toml
crates/awb_mw_api/src/: auth.rs  client.rs  error.rs  lib.rs  list_endpoints.rs  oauth.rs  retry.rs  throttle.rs  typo_fetch.rs
crates/awb_mw_api/tests/: integration_tests.rs
crates/awb_plugins/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/awb_plugins/examples/: basic_usage.rs
crates/awb_plugins/examples/lua/: category_counter.lua  fix_double_spaces.lua  remove_external_links.lua  stub_detector.lua
crates/awb_plugins/src/: error.rs  lib.rs  lua_plugin.rs  plugin_manager.rs  plugin_trait.rs  sandbox.rs  wasm_plugin.rs
crates/awb_plugins/tests/: plugin_integration.rs
crates/awb_security/: Cargo.toml
crates/awb_security/src/: credential.rs  lib.rs  redaction.rs
crates/awb_storage/: Cargo.toml
crates/awb_storage/src/: config_store.rs  error.rs  lib.rs  session_store.rs
crates/awb_storage/tests/: storage_integration.rs
crates/awb_telemetry/: Cargo.toml
crates/awb_telemetry/src/: events.rs  export.rs  lib.rs  setup.rs
gen_swift_bindings/: Cargo.toml
gen_swift_bindings/src/: main.rs
tests/: e2e_security.rs  e2e_telemetry.rs  e2e_workflow.rs
ui/: UI_IMPLEMENTATION_SUMMARY.md
ui/linux/awb_gtk/: Cargo.toml  README.md
ui/linux/awb_gtk/src/: app.rs  lib.rs  main.rs
ui/linux/awb_gtk/src/views/: editor_view.rs  login_dialog.rs  main_window.rs  mod.rs  page_list.rs  rule_editor.rs
ui/macos/AWBrowser/: Package.swift  README.md
ui/macos/AWBrowser/Sources/AWBrowser/: App.swift  AwbFfi.swift
ui/macos/AWBrowser/Sources/AWBrowser/Models/: PageModel.swift
ui/macos/AWBrowser/Sources/AWBrowser/ViewModels/: SessionViewModel.swift
ui/macos/AWBrowser/Sources/AWBrowser/Views/: EditorView.swift  LoginView.swift  MainView.swift  RuleEditorView.swift
ui/macos/AWBrowser/Sources/AwbFfiC/: module.modulemap
ui/windows/AWBrowser/: AWBrowser.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  README.md
ui/windows/AWBrowser/Models/: PageModel.cs  RuleModel.cs
ui/windows/AWBrowser/ViewModels/: SessionViewModel.cs
ui/windows/AWBrowser/Views/: EditorView.xaml  EditorView.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  RuleEditorView.xaml  RuleEditorView.xaml.cs
