[workspace]
resolver = "2"
members = [
    "crates/awb_domain",
    "crates/awb_mw_api",
    "crates/awb_engine",
    "crates/awb_storage",
    "crates/awb_security",
    "crates/awb_telemetry",
    "crates/awb_bot",
    "crates/awb_ffi",
    "crates/awb_cli",
    "crates/awb_plugins",
    "ui/linux/awb_gtk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thomasvincent/awb-rs"
rust-version = "1.85"

[workspace.dependencies]
# Domain
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }

# OAuth
oauth2 = { version = "4", features = ["reqwest"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"

# Security
secrecy = "0.10"
dirs = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Regex
regex = "1"
fancy-regex = "0.14"

# Encoding
percent-encoding = "2"

# Diff
similar = { version = "2", features = ["unicode"] }

# Collections
indexmap = "2"

# Plugins
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
wasmtime = "41"

# FFI
uniffi = { version = "0.28", features = ["cli"] }

# Storage
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "cargo"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
anyhow = "1"

# Testing
proptest = "1"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
