[package]
name = "gen_swift_bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
uniffi_bindgen = { version = "0.31.0" }
anyhow = "1.0"
camino = "1.1"
