[package]
name = "awb_bot"
description = "Unattended batch editing bot for MediaWiki"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["bot", "mediawiki", "automation", "batch", "wikipedia"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
# Workspace crates
awb_domain = { path = "../awb_domain" }
awb_engine = { path = "../awb_engine" }
awb_mw_api = { path = "../awb_mw_api" }
awb_storage = { path = "../awb_storage" }
awb_security = { path = "../awb_security" }
awb_telemetry = { path = "../awb_telemetry" }

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
