[package]
name = "awb_domain"
description = "Core domain types for AutoWikiBrowser-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["mediawiki", "wiki", "bot", "automation", "editing"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
