[package]
name = "awb_engine"
description = "Text transformation engine for MediaWiki editing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["regex", "diff", "transformation", "text", "mediawiki"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
awb_domain = { path = "../awb_domain" }
regex = { workspace = true }
fancy-regex = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
