[package]
name = "awb_ffi"
description = "FFI boundary for AWB-RS (C ABI + UniFFI)"
version.workspace = true
edition = "2021"
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
awb_domain = { path = "../awb_domain" }
awb_engine = { path = "../awb_engine" }
awb_mw_api = { path = "../awb_mw_api" }
awb_storage = { path = "../awb_storage" }
awb_security = { path = "../awb_security" }
awb_telemetry = { path = "../awb_telemetry" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uniffi = { workspace = true }
lazy_static = "1.4"
chrono = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
