[package]
name = "awb_ffi"
description = "C/UniFFI bindings for AWB-RS"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["ffi", "bindings", "uniffi", "c-api", "interop"]
categories = ["api-bindings", "external-ffi-bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
awb_domain = { path = "../awb_domain" }
awb_engine = { path = "../awb_engine" }
awb_mw_api = { path = "../awb_mw_api" }
awb_storage = { path = "../awb_storage" }
awb_security = { path = "../awb_security" }
awb_telemetry = { path = "../awb_telemetry" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uniffi = { workspace = true }
lazy_static = "1.4"
parking_lot = "0.12"
chrono = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
