[package]
name = "awb_mw_api"
description = "MediaWiki API client for AWB-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
awb_domain = { path = "../awb_domain" }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
