[package]
name = "awb_mw_api"
description = "Async MediaWiki API client for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["mediawiki", "api", "client", "async", "wikipedia"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
awb_domain = { path = "../awb_domain" }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
oauth2 = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
percent-encoding = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
