[package]
name = "awb_plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Lua integration
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }

# WASM runtime
wasmtime = "36"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# AWB dependencies
awb_domain = { path = "../awb_domain" }
awb_engine = { path = "../awb_engine" }

# Regex for helper functions
regex = { workspace = true }

# Collections
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wat = "1.244"
