[package]
name = "awb_plugins"
description = "Lua and WASM plugin system for AWB-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["plugins", "lua", "wasm", "scripting", "extensibility"]
categories = ["wasm", "api-bindings"]

[dependencies]
# Lua integration
mlua = { workspace = true }

# WASM runtime
wasmtime = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# AWB dependencies
awb_domain = { path = "../awb_domain" }
awb_engine = { path = "../awb_engine" }

# Regex for helper functions
regex = { workspace = true }

# Collections
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wat = "1.244"
tempfile = "3"
