[package]
name = "awb_storage"
description = "Session and config persistence for AWB-RS"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
awb_domain = { path = "../awb_domain" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = "3"
url = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
